lib/src/compiler/tests/testdata/errors/31.out
error[E003]: mismatching types
 --> line:3:20
  |
3 |     for 1 n in (1, 2, "3") : (
  |                    ^ this expression is `integer`
  |                       ^^^ this expression is `string`
  |